Update dark mode color and fix

--- a/res/style.css
+++ b/res/style.css
@@ -31,6 +31,6 @@ a {
 }
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #222;
+    background-color: #000064;
   }
 }
